<resources>
    <string name="app_name">DogOrCatPerson</string>
    <string name="text_titles">ARE YOU AFRAID OF CANINES?</string>
    <string name="button_no">NO</string>
    <string name="button_yes">YES</string>
    <string name="seekbar_title">In scale of 1 to 10 how comfortable are you around felines?</string>
    <string name="text_cutest">Which one are cutest ?</string>
    <string name="checkbox_dog">DOG</string>
    <string name="check_cat">CAT</string>
    <string name="check_parrot">PARROT</string>
    <string name="creatures">Are you ok with creatures that drool?</string>
    <string name="cutest_scale">cuteness: 0/10</string>
    <string name="button_title">show results</string>
    <string name="result_show">you are a......</string>
    <string name="result_ok">dog or cat</string>
</resources>
