<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e20ef1"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <ScrollView
        android:id="@+id/scrollViewid"
        android:layout_width="320dp"
        android:layout_height="321dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#e9efec"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.183">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_titles"
                android:textColor="#27ef04"
                android:textSize="20dp" />

            <RadioGroup
                android:id="@+id/radiogroupid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radiobuttonNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_no" />

                <RadioButton
                    android:id="@+id/radiobuttoyes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_yes" />
            </RadioGroup>

            <TextView
                android:id="@+id/scaleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/seekbar_title" />

            <SeekBar
                android:id="@+id/seekbarid"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="10dp" />

            <TextView
                android:id="@+id/cutenessid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:text="@string/cutest_scale"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textChooseCutest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/text_cutest"
                android:textColor="#161616"
                android:textSize="15dp" />

            <CheckBox
                android:id="@+id/checkboxdog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_dog" />

            <CheckBox
                android:id="@+id/checkboxcat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_cat" />

            <CheckBox
                android:id="@+id/checkboxparrot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_parrot" />

            <TextView
                android:id="@+id/creaturesid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/creatures"
                android:textColor="#ef0d11"
                android:textSize="15dp" />

            <RadioGroup
                android:id="@+id/radiogroupDrool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radiobuttonNodrool"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_no" />

                <RadioButton
                    android:id="@+id/radiobuttonyesdrool"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_yes" />
            </RadioGroup>


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/ShowButtonid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scrollViewid"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/button_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.784" />

</android.support.constraint.ConstraintLayout>